--- a/applications/grafana/grafana.yaml
+++ b/applications/grafana/grafana.yaml
@@ -8,6 +8,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: grafana-pvc
+  namespace: apps
 spec:
   accessModes:
     - ReadWriteOnce
@@ -21,6 +22,7 @@ metadata:
   labels:
     app: grafana
   name: grafana
+  namespace: apps
 spec:
   selector:
     matchLabels:
@@ -76,6 +78,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: grafana
+  namespace: apps
 spec:
   ports:
     - port: 3000
