--- a/applications/grafana/grafana.yaml
+++ b/applications/grafana/grafana.yaml
@@ -8,7 +8,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: grafana-pvc
-  namespace: apps
+  namespace: {{.Values.namespace}}
 spec:
   accessModes:
     - ReadWriteOnce
@@ -22,7 +22,7 @@ metadata:
   labels:
     app: grafana
   name: grafana
-  namespace: apps
+  namespace: {{.Values.namespace}}
 spec:
   selector:
     matchLabels:
